--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "express": "^4.13.3",
     "mongoose": "^4.1.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "event": "^1.0.0",
+    "events": "^1.0.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
