--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "chai-http": "^1.0.0",
     "eat": "^0.1.1",
     "express": "^4.13.3",
-    "mongoose": "^4.1.7"
+    "mongoose": "^4.1.7",
+    "mongoose-unique-validator": "^0.4.1"
   },
   "devDependencies": {},
   "scripts": {
