--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   "dependencies": {
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.0",
-    "chai": "^3.2.0",
-    "chai-http": "^1.0.0",
     "eat": "^0.1.1",
     "express": "^4.13.3",
     "mongoose": "^4.1.7",
@@ -29,8 +27,18 @@
   "engines": {
     "node": ">=0.10"
   },
-  "bugs":{
+  "bugs": {
     "url": "https://github.com/cbleague/cbl/issues"
   },
-  "homepage": "https://github.com/cbleague/cbl"
+  "homepage": "https://github.com/cbleague/cbl",
+  "devDependencies": {
+    "angular": "^1.4.7",
+    "angular-base64": "^2.0.5",
+    "angular-cookies": "^1.4.7",
+    "chai": "^3.3.0",
+    "chai-http": "^1.0.0",
+    "gulp": "^3.9.0",
+    "karma": "^0.13.10",
+    "webpack-stream": "^2.1.1"
+  }
 }
