--- a/package.json
+++ b/package.json
@@ -2,17 +2,28 @@
   "name": "CBL",
   "version": "1.0.0",
   "description": "Custom Basketball Legue REST API",
-  "main": "server.js",
+  "main": "gulpfile.js",
   "directories": {
     "test": "test"
   },
   "dependencies": {
     "bcrypt": "^0.8.5",
+    "bluebird": "^2.10.2",
     "body-parser": "^1.14.0",
+    "chokidar": "^1.2.0",
+    "connect": "^3.4.0",
+    "cookiejar": "^2.0.1",
+    "di": "0.0.1",
     "eat": "^0.1.1",
+    "expand-braces": "^0.1.1",
     "express": "^4.13.3",
+    "lodash": "^3.10.1",
+    "log4js": "^0.6.27",
     "mongoose": "^4.1.7",
-    "mongoose-unique-validator": "^0.4.1"
+    "mongoose-unique-validator": "^0.4.1",
+    "qs": "^1.2.0",
+    "socket.io": "^1.3.7",
+    "useragent": "^2.1.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -40,6 +51,13 @@
     "chai-http": "^1.0.0",
     "gulp": "^3.9.0",
     "karma": "^0.13.10",
-    "webpack-stream": "^2.1.1"
+    "webpack-stream": "^2.1.1",
+    "connect-livereload": "^0.5.3",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-ng-config": "^1.2.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-webserver": "^0.9.1",
+    "require-dir": "^0.3.0",
+    "vinyl-fs": "^2.2.0"
   }
 }
