--- a/package.json
+++ b/package.json
@@ -44,20 +44,21 @@
   "homepage": "https://github.com/cbleague/cbl",
   "devDependencies": {
     "angular": "^1.4.7",
+    "angular-animate": "^1.4.7",
     "angular-base64": "^2.0.5",
     "angular-cookies": "^1.4.7",
     "angular-route": "^1.4.7",
     "chai": "^3.3.0",
     "chai-http": "^1.0.0",
-    "gulp": "^3.9.0",
-    "karma": "^0.13.10",
-    "webpack-stream": "^2.1.1",
     "connect-livereload": "^0.5.3",
+    "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-ng-config": "^1.2.1",
     "gulp-notify": "^2.2.0",
     "gulp-webserver": "^0.9.1",
+    "karma": "^0.13.10",
     "require-dir": "^0.3.0",
-    "vinyl-fs": "^2.2.0"
+    "vinyl-fs": "^2.2.0",
+    "webpack-stream": "^2.1.1"
   }
 }
