--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-ng-config": "^1.2.1",
     "gulp-notify": "^2.2.0",
+    "gulp-run": "^1.6.11",
     "gulp-webserver": "^0.9.1",
     "karma": "^0.13.10",
     "mongoose": "^4.1.11",
