--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "stringify": "^3.1.0",
     "unpipe": "^1.0.0",
     "vinyl-fs": "^2.2.0",
-    "webpack-stream": "^2.1.1"
+    "webpack-stream": "^2.1.1",
+     "ee-first": "^1.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -60,7 +61,6 @@
     "angular-cookies": "^1.4.7",
     "angular-route": "^1.4.7",
     "chai": "^3.3.0",
-    "chai-http": "^1.0.0",
-    "ee-first": "^1.1.1"
+    "chai-http": "^1.0.0"
   }
 }
