--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "dependencies": {
-    "bcrypt": "^0.8.5",
+    //"bcrypt": "^0.8.5",
     "bluebird": "^2.10.2",
     "body-parser": "^1.14.0",
     "chokidar": "^1.2.0",
